fix: setting hue to `0` breaks the style #44

--- a/source/css/_util/color.styl
+++ b/source/css/_util/color.styl
@@ -1,5 +1,7 @@
+@import "config"
+
 _color_set(colors)
-  default-hue = hexo-config("hue")
+  default-hue = get-config-or-default("hue", 0)
   for key, value in colors
     if type(value) == 'ident'
       {key}: var(value)
